Added exceptions and checks for exceptions. Used ProcessBuilder for spawning processes.